--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
+    "@remixicon/react": "^4.6.0",
     "better-auth": "^1.2.8",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "resend": "^4.5.2",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
