--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@remixicon/react": "^4.6.0",
+    "@tanstack/react-query": "^5.80.7",
     "better-auth": "^1.2.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
@@ -22,12 +24,16 @@
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "resend": "^4.5.2",
     "server-only": "^0.0.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^1.0.0"
+    "tailwind-variants": "^1.0.0",
+    "viem": "2.x",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
